[gd_scene load_steps=5 format=3 uid="uid://bibquweqev708"]

[ext_resource type="Script" path="res://Assets/ShipParts/snap_area.gd" id="1_n27m5"]
[ext_resource type="ArrayMesh" uid="uid://dsiyqaauu1obw" path="res://Assets/ShipParts/base_module.obj" id="2_cyr2k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dscbf"]
size = Vector3(2, 2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ovspc"]
transparency = 1
albedo_color = Color(0, 1, 0, 0.117647)

[node name="SnapArea" type="Area3D"]
script = ExtResource("1_n27m5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_dscbf")

[node name="Indicator" type="Node3D" parent="."]
visible = false

[node name="IndicatorShape" type="MeshInstance3D" parent="Indicator"]
mesh = ExtResource("2_cyr2k")
surface_material_override/0 = SubResource("StandardMaterial3D_ovspc")

[connection signal="input_event" from="." to="." method="_on_SnapArea_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_SnapArea_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SnapArea_mouse_exited"]
